# KTree

./: README.md
code/SOFA/: config.status
code/SOFA/scripts/: run_scedc.sh
code/SOFA/src/utils/: MESSI.c
code/dstree/ds-tree-c/: README
code/dstree/ds-tree-c/autom4te.cache/: output.0  requests  traces.0
code/dstree/ds-tree-c/src/: dstree_index.c  dstree_query_engine.c
code/dumpy/: README.md
code/dumpy/include/DataStructures/: DumpyNode.h
code/dumpy/src/IndexConstruction/: DumpyNode.cpp
code/hercules/: README.md
code/kd-tree/: README
code/ktree/: CMakeLists.txt  README.md
code/ktree/.devcontainer/: Dockerfile  devcontainer.json
code/ktree/ktreelib/: ktree.cpp  ktree.hpp  query.hpp
code/ktree/scripts/: plot_results.py
code/rtree/test/rtree/: RTreeBulkLoad.cc  flags.h
code/va+file/: config.status
code/va+file/include/: vaplus_index.h
code/va+file/src/: vaplus.c  vaplus_index.c
data-queries/: README.md
scripts/: config.json  dependencies.sh  reproduce.py
